wp-content/themes/blankslate/style.css
/*
Theme Name: BlankSlate
Theme URI: http://wordpress.org/themes/blankslate
Author: TidyThemes
Author URI: http://tidythemes.com/
Description: <strong>UPDATE</strong> - 4.0+ is here, completely overhauled, yet again. As always, <a href="http://tidythemes.com/concept/#upgrading">use caution when upgrading</a> (tidythemes.com/concept/#upgrading) and <a href="http://tidythemes.com/concept/">learn the TidyThemes concept</a> (tidythemes.com/concept). &nbsp; &rarr; <em><strong>CAUTION</strong>: If you're child theming or have clients that are child theming on top of BlankSlate (not the recommended use), please do not blindly upgrade to newer versions.</em> &nbsp; &rarr; <strong>DESCRIPTION</strong>: BlankSlate is the definitive WordPress HTML5 boilerplate starter theme. We've carefully constructed the most clean and minimalist theme available anywhere for designers/developers to use as a base/foundation to build websites for clients or to build completely custom themes from scratch to release faster. Clean, semi-minified, unformatted and valid code, SEO-friendly, no programmer comments, standardized and as white label as possible and most importantly, CSS reset for cross-browser-compatability and no intrusive visual CSS styles added whatsoever. A perfect skeleton theme that blows any others like it (the subsequent underscores.me for example) completely out of the water, as they're simply too overcomplicated for what people really want in this kind of theme. Now comes with jQuery enqueued and ready to go. &nbsp; &rarr; <strong>SUPPORT</strong>: Please use the <a href="http://tidythemes.com/forum/">official support forum</a> (tidythemes.com/forum). Comments and suggestions for improving BlankSlate, please see "<a href="http://tidythemes.com/tidythemes-sucks/">TidyThemes Sucks!</a>" (tidythemes.com/tidythemes-sucks). Just getting started? <a href="http://tidythemes.com/want-to-learn-css/">Want to learn CSS?</a> (tidythemes.com/want-to-learn-css) &nbsp; &rarr; <strong>WHAT'S NEW?</strong>: We stripped down as much custom, extraneous, superfluous junk code as we could and greatly improved the HTML5 structure. <a href="http://make.wordpress.org/themes/author/chipbennett/">Chip Bennett</a> (make.wordpress.org/themes/author/chipbennett), a highly experienced programmer and official WordPress administrator, worked closely with us to audit the theme code for quality. <a href="http://themes.trac.wordpress.org/changeset?old_path=/blankslate/3.3&new_path=/blankslate/4.0">See</a> (themes.trac.wordpress.org/changeset?old_path=/blankslate/3.3&new_path=/blankslate/4.0) just how much we've revamped things. Last, but not least, BlankSlate has now been <a href="https://github.com/tidythemes/blankslate">opened up on GitHub</a> (github.com/tidythemes/blankslate) if anyone would like to make suggested code additions/improvements. Thank you for using BlankSlate.
Version: 4.0.3
License: GNU General Public License
License URI: https://www.gnu.org/licenses/gpl.html
Tags: black, blue, white, light, one-column, fluid-layout, responsive-layout, custom-menu, featured-images, microformats, sticky-post, threaded-comments, translation-ready
Text Domain: blankslate

BlankSlate WordPress Theme © 2011-2015 TidyThemes
BlankSlate is distributed under the terms of the GNU GPL
*/

html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{font-size:100%;font:inherit;padding:0;border:0;margin:0;vertical-align:baseline}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}.clear{clear:both}
.sticky{}.bypostauthor{}.wp-caption{}.wp-caption-text{}.gallery-caption{}.alignright{}.alignleft{}.aligncenter{}.screen-reader-text{clip:rect(1px, 1px, 1px, 1px);position:absolute !important}

#header {
	margin: auto;
	padding: 40px 80px 40px 80px;
}

.content {
	margin: auto;
	padding: 0 80px 0 80px;
}

#branding {
	display:inline;
	float: left;
}

.menu-burger {
	margin-top: 20px;
	width: 22px;
	height: 13px;
	background: url('images/menu.svg') no-repeat;
	float: right;
}

.menu {
	display: none !important;
}

.splash {
	height: 500px;
	overflow:hidden;
	background-repeat: no-repeat;
	background-size: cover;  
	background-image: url('images/splash.png');
}

.logo {
	width: 61px;
	height: 61px;
}

a.arrow-up, a.arrow-down {
	text-align:center;
	margin: 100px auto 200px auto;
	width: 70px;
	height: 37px;
	background: url('images/arrow-down.svg') no-repeat;
	display: block;
}

a.arrow-up {
	-ms-transform: rotate(180deg); /* IE 9 */
    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
    transform: rotate(180deg);
}


h1.projects {
	margin-bottom: 5.625rem;
	text-align: center;
	font-weight: 900;
	font-size: 2.5rem;
}

.project {
	position: relative;
	margin-bottom: 30px;
	font-size: 1rem;
	font-weight: 400;
	min-height: 280px;
}

.project-small {
	max-width: 280px;
}

.project a, .project a:active {
	color: black;
	z-index: 99;
	position: relative;
	font-weight: 600;
	font-size: 1rem;
}

.project .title-right {
	text-align: left;
	position: absolute;
	padding: 10px 20px 0 20px;
	border-top: 3px solid black;
}

.project .title-left {
	text-align: right;
	position: absolute;
	padding: 10px 20px 0 20px;
	border-top: 3px solid black;
}

.project .title-left-down {
	text-align: right;
	position: absolute;
	top: 310px;
	padding: 10px 20px 0 20px;
	border-top: 3px solid black;
}

.project-bottom {
	position: absolute;
	bottom: 0;
}

.project-right {
	position: absolute;
	right: 0;
}

.project-left {
	position: absolute;
	left: 0;
}

.project-side-column {
	display:none;
}

.margin-left {
	margin-left: 30px;
}
.margin-right {
	margin-right: 30px;
}
.text-right {
	text-align: right;
}

.blue {
	background-color: #cde8fa;
}

.gray {
	background-color: #f4f4f4;
}

.quote {
	margin: 0 auto 150px auto;
}

.quote .column {
	max-width: 590px;
}
.quote .quote-icon {
	color: #ba3963;
	font-weight: 700;
	font-size: 10.625rem;
	margin-bottom: 0;
	margin-top: 100px;
	padding-bottom: 0;
	line-height: 0.5em;
	padding-left: 10px;
}
.quote .quote-text {
	font-weight: 800;
	font-style: italic;
	font-size: 1.5625rem;
	padding-left: 18px;
	margin-bottom: 0;
	line-height: 1.875rem;
}

.about {
	margin: 0 auto 70px auto;
}

.about .column {
	max-width: 590px;
}

.about h2 {
	font-size: 1.75rem;
	font-weight: 800;
	padding-left: 18px;
}

.about p {
	font-size: 1.125rem;
	padding-left: 18px;
	margin-bottom: 0;
}

aside.contact {
	float:left;
	font-size: 0.875rem;
	font-weight: 300;
	position: absolute;
	margin-left: -20px;
}

aside.contact ul {
	margin: 0;
	padding: 0;
}

aside.contact li {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

aside.contact .header {
	margin-top: 10px;
	font-weight: 600;
}

.single h1.title {
	font-size: 2.1875rem;
	font-weight: 700;
	margin-bottom: 60px;
}

.single .category {
	font-size: 2.5rem;
	font-weight: 300;
	margin-top: 30px;
}

.single h2 {
	font-size: 1.25rem;
	font-weight: 700;
}

.single p {
	font-size: 1rem;
	margin-bottom: 0;
}


.single .block {
	margin-bottom: 60px;
}

.single .single-image {
	margin-bottom: 100px;
}

.single .quote {
	margin-bottom: 0;
	width: auto;
	font-size: 1.875rem;
	font-weight: 800;
	padding-left: 30px;
	border-left: 10px solid black;
	line-height: 2.3125rem;
}

.single h3 {
	font-size: 1.375rem;
	font-weight: 700;
	line-height: 2.5rem;
}

.single .info {
	font-size: 0.875rem;
}

.line {
	border-top: 1px solid #dcdcdc;
	margin-bottom: 80px;
}

.button-up {
	display: block;
	margin: 0 auto 80px;
	width: 115px;
	padding: 8px 0 8px 0;
	border: 3px solid #ba3963;
	text-align: center;
	color: #ba3963;
	font-size: 0.875rem;
	font-weight: 600;
	text-transform: uppercase;
	line-height: 1rem;
}

.button-up:hover {
	border-color: #fa6993;
}


a, a:hover {
	text-decoration: none;
}

footer {
	padding: 0 80px 100px 80px;
	overflow-x: hidden;
}

footer .row.profile .columns.profile{
	max-width: 590px;
}

footer .row.profile img,
footer .row.profile p {
	padding-left: 15px;
}

footer .row.profile .row .column {
	margin-bottom: 30px;
}

footer .column-social {
}

footer .social-stuff {
	position: relative;
}

footer .social-icon-bottom {
	position: absolute;
	bottom: 0px;
	left: 0px;
}

footer .social-icon-top {
	position: absolute;
	top: 0px;
	left: 0px;
}

footer .social-icon {
	color: #ba3963;
	padding: 0 !important;
	margin-left: 60px !important;
}

p.work-title {
	font-size: 1.5625rem;
	font-weight: 300;
	line-height: 1.5rem;
	padding: 0;
	margin: 0;
}

p.name {
	font-size: 1.25rem;
	line-height: 1.5rem;
	font-weight: 900;
	padding: 0;
	margin: 0 0 -2px 0;
}

.vertical-contact {
	position: absolute;
	left: 0;
	margin-top: 170px;
	font-size: 40px !important;
	font-weight: 900;
    -ms-transform: rotate(-90deg); /* IE 9 */
    -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
    transform: rotate(-90deg);
}


/* Small Only*/
@media screen and (max-width: 39.9375em) {

	#header {
		padding: 20px 20px 20px 20px;
	}
	.content {
		padding: 0 20px 0 20px;
	}
	footer {
		padding: 0 20px 100px 20px;
	}
	footer .social-icon {
		min-width: 200px;
		margin-left: 30px !important;
	}
}

/* Medium and up */
@media screen and (min-width: 40em) {
}

/* Medium only */
@media screen and (min-width: 40em) and (max-width: 63.9375em) {}

/* Large and up */
@media screen and (min-width: 64em) {
	.show-for-medium-down {
		display: none !important;
	}
}

/* Large only */
@media screen and (min-width: 64em) and (max-width: 74.9375em) {}

/* Medium and down */
@media only screen and (max-width: 64em) { 
	.project-bottom {
		position: relative;
		bottom: 0;
	}
	.margin-left {
		margin-left: 0;		
	}
	.margin-right {
		margin-right: 0;		
	}
	.project img {
		width: 100%;
	}
	.project {
		margin-bottom: 30px;
		min-height: 0;
	}
	.project-small {
		max-width: none;
		position: inherit;
	}
	.project-side-column {
		display:block;
	}

	.quote, .about {
		width: auto;
	}

	.hide-for-medium-down {
		display: none !important;
	}
}

